Update docs and route
